testcases/error/invalid_factor.veryl
module invalid_factor {
    let _a: logic = invalid_factor;
}
